--- a/src/index.css
+++ b/src/index.css
@@ -22004,7 +22004,7 @@
   }
   
   .project-header {
-    background-image: url("/auth-background.svg");
+    background-image: url("../src/assets/images/auth-background.svg");
     background-position: top right;
     background-repeat: no-repeat;
     background-color: #3b41e3;
@@ -22013,7 +22013,7 @@
   }
   
   .dashboard-header {
-    background-image: url("/auth-background.svg");
+    background-image: url("../src/assets/images/auth-background.svg");
     background-position: top right;
     background-repeat: no-repeat;
     background-color: #3b41e3;
@@ -22029,7 +22029,7 @@
     left: 0;
     width: 100%;
     height: 640px;
-    background-image: url("/auth-background.svg");
+    background-image: url("../src/assets/images/auth-background.svg");
     background-position: top right;
     background-repeat: no-repeat;
     background-color: #3b41e3;
@@ -22054,7 +22054,7 @@
   }
   
   .call-to-action {
-    background-image: url("/auth-background.svg");
+    background-image: url("../src/assets/images/auth-background.svg");
     background-position: top right;
     background-repeat: no-repeat;
     background-size: 450px;
@@ -22131,7 +22131,7 @@
   
   .auth-page {
     background-color: #3b41e3;
-    background-image: url("/auth-background.svg");
+    background-image: url("../src/assets/images/auth-background.svg");
     background-position: top right;
     background-repeat: no-repeat;
   }
