--- a/src/index.css
+++ b/src/index.css
@@ -22121,7 +22121,7 @@
   }
   
   .list-check li {
-    background: url("/icon-checklist.svg") no-repeat left 8px;
+    background: url("../src/assets/images/icon-checklist.svg") no-repeat left 8px;
     padding: 6px 0px 3px 28px;
   }
   
